# lddw

project/: CMakeLists.txt
project/inc/: fw.h
project/src/: CMakeLists.txt  ldd.c  main.c
